--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_45"/>
 	<classpathentry kind="lib" path="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.osgi_3.10.2.v20150203-1939.jar" sourcepath="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.osgi_3.10.2.v20150203-1939.jar"/>
 	<classpathentry kind="lib" path="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.core.commands_3.6.100.v20140528-1422.jar" sourcepath="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.core.commands_3.6.100.v20140528-1422.jar"/>
 	<classpathentry kind="lib" path="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.equinox.common_3.6.200.v20130402-1505.jar" sourcepath="D:/soft/eclipse-java-luna-SR2-win32/eclipse/plugins/org.eclipse.equinox.common_3.6.200.v20130402-1505.jar"/>
