--- a/configuration/login_info.properties
+++ b/configuration/login_info.properties
@@ -1,4 +1,9 @@
 #
-#Wed Jul 15 13:57:41 CST 2015
+#Wed Jul 22 09:07:29 CST 2015
 password=a9ad4503100ea4ce
+jdbc.username=sa
+jdbc.port=1433
+jdbc.password=QAZqaz01
+jdbc.databasename=product
+jdbc.ip=127.0.0.1
 username=
